# pyproject.toml

# Seção 1: Sistema de Build
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Seção 2: Metadados do Projeto (PEP 621)
[project]
name = "dna-analyzer"
version = "1.0.0"
description = "Ferramentas para análise de imagens de DNA de Microscopia de Força Atômica (AFM) submetido a radiação ionizante."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "None" } 
authors = [
    { name = "Gustavo Costa", email = "gbscosta.dev@gmail.com" },
]

# Dependências principais do projeto
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "opencv-contrib-python",
    "seaborn",
    "scipy"
]

# Dependências para desenvolvimento e testes
[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

# URLs úteis para o projeto
[project.urls]
Homepage = "https://github.com/ProgGusta/project_dna_afm.git"